# suns-dataset

./: .gitignore  README.md
anon_cpp/: Readme.md  example-gcc-stripped  example-gcc-stripped-cfr.json  example.cpp
control_flow_recovery/: README.md  README.md~
control_flow_recovery/analysis/: README  analyze  decode_me  offset_to_instruction.py  package_results_excel.py  pe_fileoffset_conversion.py  remove_old_images.sh  show_me_all_the_questions  validate_cfr_files  validate_groundtruth  validate_groundtruth2  validate_groundtruth2.py  validate_groundtruth3  validate_groundtruth_targets  validate_pe_gt.ipynb
control_flow_recovery/analysis/tools/cdbwrapper/: pyproject.toml
control_flow_recovery/analysis/tools/cdbwrapper/src/cdbwrapper/: cdb.py
control_flow_recovery/auburn_benchmarks/: 0-cfr.json  0.c  2  2-cfr.json  2.cpp  3-cfr.json  3.c  4-cfr.json  4.c  5  5-cfr.json  6  6-cfr.json  6.c  7  7-cfr.json  7.c  8-cfr.json  9-cfr.json  answers.json  questions.json
control_flow_recovery/auburn_sok_benchmarks/: readme.md
control_flow_recovery/common_challenges/: README
control_flow_recovery/dial_a_benchmark/: conditional-30-cfr.json  conditional-30.c
control_flow_recovery/injected/: inject.py  inject.sh
control_flow_recovery/jakstab_curated/: helloworld-cfr.json  interproc-cfr.json  jumptable-cfr.json  (+6 more)
docs/: FAQ.md
icf/: cmd.txt  fptr.c  overapprox.c
logic_bombs/: cpu_usage_lb.c  external_input_lb.c  hardware_lb.c  peripheral_lb.c
naughty_linux/: alternate_root.c  sudo_nopasswd_chattr.c  sudo_password_logger.c
scripts/: build-variants.sh
(+3935 files in other folders)
