[project]
name = "cdbwrapper"
version = "0.0.1"
authors = [
  { name="Enoch Yang", email="enya@bam.moe" },
]
description = "A wrapper for Window's debugger cdb.exe"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: Windows",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/Program-Understanding/suns-dataset"
Issues = "https://github.com/Program-Understanding/suns-dataset/issues"